# dicom-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: error.rs  img.rs  lib.rs  tag.rs  types.rs  vr.rs
src/parser/: element.rs  image.rs  mod.rs  obj.rs  sq.rs
tags/: tags.csv
