[package]
name = "dicom"
version = "0.1.0"
authors = ["Benoit Eudier <benoit.eudier@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
thiserror = "1.0.11"
chrono = "0.4.7"
log = "0.4.6"
pretty_env_logger = "0.4.0"

# For converting imagebuffer to PNG
png = "0.15"
image = "0.23.0"
# { git = "https://github.com/SnoozeTime/image", branch = "grayscale_png_16bits"}
nom = "5.1.1"

[build-dependencies]
csv = "1.1.3"
serde = "1.0.105"
serde_derive = "1.0.105"

[profile.release]
debug = true